# python-validator

./: README.md  pyproject.toml
.github/workflows/: ci.yml
test/: test_validate.py
validator/: __init__.py  validate.py
