[tool.poetry]
name = "python-validator"
version = "0.1.0"
description = ""
authors = ["Denis Zvyagintsev <dizvyagintsev@avito.ru>"]
readme = "README.md"
packages = [{include = "python_validator"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
pylint = "^2.15.8"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

